# CLI_template

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.toml  pyproject.toml
.github/: dependabot.yml
app/: CLI_usage_typer.md  main.py
app/cli/: hello.py
app/cli/config/: CONFIG_SECURITY.md  config.py
